--- a/website/index.html
+++ b/website/index.html
@@ -29,13 +29,13 @@
     </nav>
     <div class="container" id="sec-1-grad">
         <div class="row">
-            <div class="col-8">
+            <div class="col-12 full-each">
                 <div class="leftSide-col">
                     <h1 class="large">Therapy With Nurse Bee!</h1>
                     <h2 class="large"><i> Here to listen...</i></h2>
                 </div>
             </div>
-            <div class="col-4">
+            <!-- <div class="col-5 full-each">
                 <div class="rightSide-col">
                     <div class="video">
 
@@ -45,7 +45,7 @@
                             allowfullscreen></iframe>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
@@ -54,7 +54,7 @@
     </header>
     <div class="container">
         <div class="row">
-            <div class="col-4">
+            <div class="col-4 full-each">
                 <div class="box">
                     <div class="icon">
                         <img src="image/heart-chat.png" alt="">
@@ -64,7 +64,7 @@
                         sunt possimus.</p>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-4 full-each">
                 <div class="box">
                     <div class="icon">
                         <img src="image/heart-chat.png" alt="">
@@ -84,7 +84,7 @@
                     </p>
                 </div>
             </div> -->
-            <div class="col-4">
+            <div class="col-4 full-each">
                 <div class="box">
                     <div class="icon">
                         <img src="image/heart-chat.png" alt="">
@@ -105,7 +105,7 @@
     <hr>
     <div class="container">
             <div class="row align-centre">
-                <div class="col-7">
+                <div class="col-6 full-each">
                     <div class="for-pad">
                         <h1 class="connect-header">
                             <p><strong>Let's work out your mental health together for a <i>healthier you</i></strong></p>
@@ -121,11 +121,11 @@
                             <hr >
                         </div>
                         <br><button class="btn-like">
-                            <a href="">Book an appointment</a>
+                            <a href="#">Book an appointment</a>
                         </button>
                     </div>
                 </div>
-                <div class="col-5">
+                <div class="col-6 full-each">
                     <div class="img-2">
                         <img src="image/Holding-hand.jpg" alt="holding hand">
                     </div>
@@ -133,15 +133,75 @@
                 <div></div>
              </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <p>Another space</p>
-                <img src="image/Help.jpg" alt="">
+    <div class="foot">
+        <footer class="footsy">
+            <div class="row" id="footer-row1">
+                <div class="col-2 mobileStack">
+                    <h1>Explore</h1>
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">FAQs</a></li>
+                    </ul>
+                </div>
+                <div class="col-3 mobileStack">
+                    <h1>Services</h1>
+                    <ul>
+                        <li><a href="">One-time Appointment</a></li>
+                        <li><a href="">Membership Plans</a></li>
+                        <li><a href="">Research</a></li>
+                        <li><a href="">Careers</a></li>
+                    </ul>
+                </div>
+                <div class="col-3 mobileStack">
+                    <h1>Follow Us</h1>
+                    <ul>
+                        <li><a href="">Facebook</a></li>
+                        <li><a href="">Twitter</a></li>
+                        <li><a href="">LinkedIn</a></li>
+                        <li><a href="">Instagram</a></li>
+                    </ul>
+                </div>
+                <div class="col-4 mobileStack">
+                    <h1>Sign Up for Our Newsletter</h1>
+                    <form>
+                        <input type="text" placeholder="First Name" class="newsletter"><br>
+                        <input type="email" placeholder="Email" class="newsletter"> <br>
+                        <input type="submit" value="Submit" class="newsletter-sub">
+                    </form>
+                </div>
+            </div>
+        </footer>
+        <div>
+            <p class="footer-line"></p>
+        </div>
+        <div class="foot">
+            <div class="row section-2-footer">
+                <div class="col-3 mobileStack2">
+                    <h2>Get In Touch:</h2>
+                </div>
+                <div class="col-3 mobileStack2">
+                    <h3>Email</h3>
+                    <p><a href="#">NurseBee@gmail.com</a></p>
+                </div>
+                <div class="col-3 mobileStack2">
+                    <h3>WhatsApp</h3>
+                    <p><a href="#whatsapp-link">+234&nbsp;(905)&nbsp;4567&#8209;444</a></p>
+                </div>
+                <div class="col-3 mobileStack2">
+                    <h3>Call</h3>
+                    <p><a href="tel:09054567444">+234&nbsp;(905)&nbsp;4567&#8209;444</a></p>
+                </div>
+            </div>
+            <div class="row copyright">
+                <div class="col-12 copy">
+                    <span>Copyright © khaybee 2023</span>
+                </div>
             </div>
         </div>
-
     </div>
+
+    
 
     <script>
         function dropdownMenu() {
