--- a/website/index.html
+++ b/website/index.html
@@ -176,7 +176,7 @@
             <p class="footer-line"></p>
         </div>
         <div class="foot">
-            <div class="row section-2-footer">
+            <div class="row footer-section2">
                 <div class="col-3 mobileStack2">
                     <h2>Get In Touch:</h2>
                 </div>
