--- a/Pricing Page/index.html
+++ b/Pricing Page/index.html
@@ -70,7 +70,7 @@
         </div>
     </div>
     <div class="original-image">
-        <button class=""><a href="./goal3.png">Click to view the original image</a></button>
+        <button class=""><a href="./goal3.png" target="_blank">Click to view the original image</a></button>
     </div>
 
 </body>
