--- a/AboutMe Page/index.html
+++ b/AboutMe Page/index.html
@@ -43,7 +43,7 @@
     <div class="contact-me ">
         <h2 class="display-5 fw-semibold mt-5">Get In Touch</h2>
         <h3 class=" sub-text my-5">If you love reading books as much as I do.</h3>
-        <p class="contact-message text-dark">Love reading books much as I do? Let's talk about how awesome some stories are! We can try to code
+        <p class="contact-message text-dark lead mb-4 fw-normal">Love reading books much as I do? Let's talk about how awesome some stories are! We can try to code
           our favorite characters to life! 😉</p>
         <a class="btn fw-bold" href="mailto:kachieosuji11@gmail.com">CONTACT ME</a>
     </div>
