--- a/website/index.html
+++ b/website/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My website</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Spirax&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Norican&family=Spirax&display=swap" rel="stylesheet">
@@ -27,34 +28,26 @@
             <li class="dropdownicon"><a href="#" onclick="dropdownMenu()">&#9776;</a></li>
         </ul>
     </nav>
-    <div class="container" id="sec-1-grad">
-        <div class="row">
-            <div class="col-12 full-each">
+    <div class="containers mt-0" id="sec-1-grad">
+        <div class="logo">
+            <img src="./image/Screenshot__74_-removebg-preview.png" alt="logo" height="700">
+        </div>
+        <div class="rows">
+            <!-- <div class="cols-12 full-each">
                 <div class="leftSide-col">
                     <h1 class="large">Therapy With Nurse Bee!</h1>
                     <h2 class="large"><i> Here to listen...</i></h2>
-                </div>
+                </div> -->
             </div>
-            <!-- <div class="col-5 full-each">
-                <div class="rightSide-col">
-                    <div class="video">
-
-                        <iframe width="500" height="350" src="https://www.youtube.com/embed/ndZBjSNNZeA"
-                            title="23 August 2023" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen></iframe>
-                    </div>
-                </div>
-            </div> -->
         </div>
     </div>
 
     <header>
-        <h1 class="sec-2-header">Your Mental Health Is Important</h1>
+        <h1 class="sec-2-header mt-5">Your Mental Health Is Important</h1>
     </header>
-    <div class="container">
-        <div class="row">
-            <div class="col-4 full-each">
+    <div class="containers">
+        <div class="rows">
+            <div class="cols-4 full-each">
                 <div class="box">
                     <div class="icon">
                         <img src="image/heart-chat.png" alt="">
@@ -64,7 +57,7 @@
                         sunt possimus.</p>
                 </div>
             </div>
-            <div class="col-4 full-each">
+            <div class="cols-4 full-each">
                 <div class="box">
                     <div class="icon">
                         <img src="image/heart-chat.png" alt="">
@@ -74,7 +67,7 @@
                         sunt possimus.</p>
                 </div>
             </div>
-            <!-- <div class="col-4">
+            <!-- <div class="cols-4">
                 <div class="box">
                     <div class="icon">
                         <img src="image/heart-chat.png" alt="">
@@ -84,7 +77,7 @@
                     </p>
                 </div>
             </div> -->
-            <div class="col-4 full-each">
+            <div class="cols-4 full-each">
                 <div class="box">
                     <div class="icon">
                         <img src="image/heart-chat.png" alt="">
@@ -95,17 +88,17 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12">
+        <div class="rows">
+            <div class="cols-12">
                 <button class="learnMore"><a href="">Learn More</a></button>
 
             </div>
         </div>
     </div>
     <hr>
-    <div class="container">
-            <div class="row align-centre">
-                <div class="col-6 full-each">
+    <div class="containers">
+            <div class="rows align-centre">
+                <div class="cols-6 full-each">
                     <div class="for-pad">
                         <h1 class="connect-header">
                             <p><strong>Let's work out your mental health together for a <i>healthier you</i></strong></p>
@@ -125,7 +118,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="col-6 full-each">
+                <div class="cols-6 full-each">
                     <div class="img-2">
                         <img src="image/Holding-hand.jpg" alt="holding hand">
                     </div>
@@ -135,8 +128,8 @@
     </div>
     <div class="foot">
         <footer class="footsy">
-            <div class="row" id="footer-row1">
-                <div class="col-2 mobileStack">
+            <div class="rows" id="footer-row1">
+                <div class="cols-2 mobileStack">
                     <h1>Explore</h1>
                     <ul>
                         <li><a href="">Home</a></li>
@@ -144,7 +137,7 @@
                         <li><a href="">FAQs</a></li>
                     </ul>
                 </div>
-                <div class="col-3 mobileStack">
+                <div class="cols-3 mobileStack">
                     <h1>Services</h1>
                     <ul>
                         <li><a href="">One-time Appointment</a></li>
@@ -153,7 +146,7 @@
                         <li><a href="">Careers</a></li>
                     </ul>
                 </div>
-                <div class="col-3 mobileStack">
+                <div class="cols-3 mobileStack">
                     <h1>Follow Us</h1>
                     <ul>
                         <li><a href="">Facebook</a></li>
@@ -162,7 +155,7 @@
                         <li><a href="">Instagram</a></li>
                     </ul>
                 </div>
-                <div class="col-4 mobileStack">
+                <div class="cols-4 mobileStack">
                     <h1>Sign Up for Our Newsletter</h1>
                     <form>
                         <input type="text" placeholder="First Name" class="newsletter"><br>
@@ -176,25 +169,25 @@
             <p class="footer-line"></p>
         </div>
         <div class="foot">
-            <div class="row footer-section2">
-                <div class="col-3 mobileStack2">
+            <div class="rows footer-section2">
+                <div class="cols-3 mobileStack2">
                     <h2>Get In Touch:</h2>
                 </div>
-                <div class="col-3 mobileStack2">
+                <div class="cols-3 mobileStack2">
                     <h3>Email</h3>
-                    <p><a href="#">NurseBee@gmail.com</a></p>
+                    <p><a href="kachieosuji11@gmail.com">NurseBee@gmail.com</a></p>
                 </div>
-                <div class="col-3 mobileStack2">
+                <div class="cols-3 mobileStack2">
                     <h3>WhatsApp</h3>
                     <p><a href="#whatsapp-link">+234&nbsp;(905)&nbsp;4567&#8209;444</a></p>
                 </div>
-                <div class="col-3 mobileStack2">
+                <div class="cols-3 mobileStack2">
                     <h3>Call</h3>
                     <p><a href="tel:09054567444">+234&nbsp;(905)&nbsp;4567&#8209;444</a></p>
                 </div>
             </div>
-            <div class="row copyright">
-                <div class="col-12 copy">
+            <div class="rows copyright">
+                <div class="cols-12 copy">
                     <span>Copyright © khaybee 2023</span>
                 </div>
             </div>
