--- a/Love Calculator/index.html
+++ b/Love Calculator/index.html
@@ -17,8 +17,8 @@
             <input type="text" id="yourName" placeholder="Your Name">
         </div>
         <div class="form-group">
-            <label for="partnerName">Partner's Name</label>
-            <input type="text" id="partnerName" placeholder="Partner's Name">
+            <label for="partnerName">Your Crush Name</label>
+            <input type="text" id="partnerName" placeholder="Your Crush's Name">
         </div>
         <button id="calculateBtn">Calculate Love</button>
     </div>
@@ -39,20 +39,20 @@
 
                 if (love >= 70){
                     alert("You are " + love + "% match.\n" +
-                        "You should get married");
+                        "You should get married 🥰");
                 }
                 else if (love >= 50 && love < 70){
                     alert("You are " + love + "% match.\n" +
-                        "You have a shot together");
+                        "You have a shot together 😉");
                 }
                     
                 else if (love < 50 && love > 20){
                     alert("You are " + love + "% match.\n" +
-                        "There might be no future here");
+                        "There might be no future here 😔");
                 }
                 else {
                     alert("You are " + love + "% match.\n" +
-                        "Definitely a waste of time and emotions");
+                        "Definitely a waste of time and emotions 💔");
                 }
     
                 // Here, you can calculate the love percentage and display it to the user.
