--- a/Love Calculator/index.html
+++ b/Love Calculator/index.html
@@ -39,20 +39,20 @@
 
                 if (love >= 70){
                     alert("You are " + love + "% match.\n" +
-                        "You should get married 🥰");
+                        "Dr Kachie says: You should get married 🥰");
                 }
                 else if (love >= 50 && love < 70){
                     alert("You are " + love + "% match.\n" +
-                        "You have a shot together 😉");
+                        "Dr Kachie says: You have a shot together 😉");
                 }
                     
                 else if (love < 50 && love > 20){
                     alert("You are " + love + "% match.\n" +
-                        "There might be no future here 😔");
+                        "Dr Kachie says: There might be no future here 😔");
                 }
                 else {
                     alert("You are " + love + "% match.\n" +
-                        "Definitely a waste of time and emotions 💔");
+                        "Dr Kachie says: Definitely a waste of time and emotions 💔");
                 }
     
                 // Here, you can calculate the love percentage and display it to the user.
