--- a/Love Calculator/index.html
+++ b/Love Calculator/index.html
@@ -38,21 +38,21 @@
                     love = Math.floor(love * 100) + 1;
 
                 if (love >= 70){
-                    alert("You are " + love + "% match.\n" +
-                        "Dr Kachie says: You should get married 🥰");
+                    alert("You are a " + love + "% match.\n\n" +
+                        "\tDr Kachie says: You should get married 🥰");
                 }
                 else if (love >= 50 && love < 70){
-                    alert("You are " + love + "% match.\n" +
-                        "Dr Kachie says: You have a shot together 😉");
+                    alert("You are a " + love + "% match.\n\n" +
+                        "\tDr Kachie says: You have a shot together 😉");
                 }
                     
                 else if (love < 50 && love > 20){
-                    alert("You are " + love + "% match.\n" +
-                        "Dr Kachie says: There might be no future here 😔");
+                    alert("You are a " + love + "% match.\n\n" +
+                        "\tDr Kachie says: There might be no future here 😔");
                 }
                 else {
-                    alert("You are " + love + "% match.\n" +
-                        "Dr Kachie says: Definitely a waste of time and emotions 💔");
+                    alert("You are a " + love + "% match.\n\n" +
+                        "\tDr Kachie says: Definitely a waste of time and emotions 💔");
                 }
     
                 // Here, you can calculate the love percentage and display it to the user.
